--- a/DesignTaburetka/Pages/ContractsForManagers.xaml
+++ b/DesignTaburetka/Pages/ContractsForManagers.xaml
@@ -50,13 +50,13 @@
                   Style="{StaticResource DataStyle}"
                   ColumnHeaderStyle="{StaticResource HeaderStyle}" >
                             <DataGrid.Columns>
-                                <DataGridTextColumn Header="ID работы" Binding="{Binding Path='work_id'}" IsReadOnly="True" Width="90" SortDirection="Ascending" CanUserSort="True" />
+                                <DataGridTextColumn Header="ID работы" Binding="{Binding Path='work_id'}" IsReadOnly="True" Width="*" SortDirection="Ascending" CanUserSort="True" />
                                 <!--<DataGridTextColumn Header="Порядоковый номер" Binding="{Binding 'index_num'}" Width="Auto" CanUserSort="True" ElementStyle="{StaticResource WrapText}"/>-->
-                                <DataGridTextColumn Header="Дата получения" Binding="{Binding 'came_at'}"  Width="90" CanUserSort="True" ElementStyle="{StaticResource WrapText}"/>
-                                <DataGridTextColumn Header="Дата начала" Binding="{Binding Path='work_start'}" Width="90" CanUserSort="True" ElementStyle="{StaticResource WrapText}"/>
-                                <DataGridTextColumn Header="Ориент дни" Binding="{Binding Path='suppose_days'}" Width="90" CanUserSort="False" ElementStyle="{StaticResource WrapText}"/>
-                                <DataGridTextColumn Header="Факт дни" Binding="{Binding Path='fact_days'}" Width="90" CanUserSort="False" ElementStyle="{StaticResource WrapText}"/>
-                                <DataGridTextColumn Header="Заказ" Binding="{Binding Path='project_name'}" Width="90" CanUserSort="False"/>
+                                <DataGridTextColumn Header="Дата получения" Binding="{Binding 'came_at'}"  Width="*" CanUserSort="True" ElementStyle="{StaticResource WrapText}"/>
+                                <DataGridTextColumn Header="Дата начала" Binding="{Binding Path='work_start'}" Width="*" CanUserSort="True" ElementStyle="{StaticResource WrapText}"/>
+                                <DataGridTextColumn Header="Ориент дни" Binding="{Binding Path='suppose_days'}" Width="*" CanUserSort="False" ElementStyle="{StaticResource WrapText}"/>
+                                <DataGridTextColumn Header="Факт дни" Binding="{Binding Path='fact_days'}" Width="*" CanUserSort="False" ElementStyle="{StaticResource WrapText}"/>
+                                <DataGridTextColumn Header="Заказ" Binding="{Binding Path='project_name'}" Width="*" CanUserSort="False"/>
                                 <DataGridTemplateColumn Width="50" CanUserSort="False">
                                     <DataGridTemplateColumn.CellTemplate>
                                         <DataTemplate>
@@ -82,13 +82,13 @@
                   Style="{StaticResource DataStyle}"
                   ColumnHeaderStyle="{StaticResource HeaderStyle}" >
                             <DataGrid.Columns>
-                                <DataGridTextColumn Header="ID работы" Binding="{Binding Path='work_id'}" IsReadOnly="True" Width="90" SortDirection="Ascending" CanUserSort="True" />
+                                <DataGridTextColumn Header="ID работы" Binding="{Binding Path='work_id'}" IsReadOnly="True" Width="*" SortDirection="Ascending" CanUserSort="True" />
                                 <!--<DataGridTextColumn Header="Порядоковый номер" Binding="{Binding 'index_num'}" Width="Auto" CanUserSort="True" ElementStyle="{StaticResource WrapText}"/>-->
-                                <DataGridTextColumn Header="Дата получения" Binding="{Binding 'came_at'}"  Width="90" CanUserSort="True" ElementStyle="{StaticResource WrapText}"/>
-                                <DataGridTextColumn Header="Дата начала" Binding="{Binding Path='work_start'}" Width="90" CanUserSort="True" ElementStyle="{StaticResource WrapText}"/>
-                                <DataGridTextColumn Header="Ориент дни" Binding="{Binding Path='suppose_days'}" Width="90" CanUserSort="False" ElementStyle="{StaticResource WrapText}"/>
-                                <DataGridTextColumn Header="Факт дни" Binding="{Binding Path='fact_days'}" Width="90" CanUserSort="False" ElementStyle="{StaticResource WrapText}"/>
-                                <DataGridTextColumn Header="Заказ" Binding="{Binding Path='project_name'}" Width="90" CanUserSort="False"/>
+                                <DataGridTextColumn Header="Дата получения" Binding="{Binding 'came_at'}"  Width="*" CanUserSort="True" ElementStyle="{StaticResource WrapText}"/>
+                                <DataGridTextColumn Header="Дата начала" Binding="{Binding Path='work_start'}" Width="*" CanUserSort="True" ElementStyle="{StaticResource WrapText}"/>
+                                <DataGridTextColumn Header="Ориент дни" Binding="{Binding Path='suppose_days'}" Width="*" CanUserSort="False" ElementStyle="{StaticResource WrapText}"/>
+                                <DataGridTextColumn Header="Факт дни" Binding="{Binding Path='fact_days'}" Width="*" CanUserSort="False" ElementStyle="{StaticResource WrapText}"/>
+                                <DataGridTextColumn Header="Заказ" Binding="{Binding Path='project_name'}" Width="*" CanUserSort="False"/>
                                 <DataGridTemplateColumn Width="50" CanUserSort="False">
                                     <DataGridTemplateColumn.CellTemplate>
                                         <DataTemplate>
@@ -129,13 +129,13 @@
                   Style="{StaticResource DataStyle}"
                   ColumnHeaderStyle="{StaticResource HeaderStyle}" Grid.ColumnSpan="2" >
                             <DataGrid.Columns>
-                                <DataGridTextColumn Header="ID работы" Binding="{Binding Path='work_id'}" IsReadOnly="True" Width="90" SortDirection="Ascending" CanUserSort="True" />
+                                <DataGridTextColumn Header="ID работы" Binding="{Binding Path='work_id'}" IsReadOnly="True" Width="*" SortDirection="Ascending" CanUserSort="True" />
                                 <!--<DataGridTextColumn Header="Порядоковый номер" Binding="{Binding 'index_num'}" Width="Auto" CanUserSort="True" ElementStyle="{StaticResource WrapText}"/>-->
-                                <DataGridTextColumn Header="Дата получения" Binding="{Binding 'came_at'}"  Width="90" CanUserSort="True" ElementStyle="{StaticResource WrapText}"/>
-                                <DataGridTextColumn Header="Дата начала" Binding="{Binding Path='work_start'}" Width="90" CanUserSort="True" ElementStyle="{StaticResource WrapText}"/>
-                                <DataGridTextColumn Header="Ориент дни" Binding="{Binding Path='suppose_days'}" Width="90" CanUserSort="False" ElementStyle="{StaticResource WrapText}"/>
-                                <DataGridTextColumn Header="Факт дни" Binding="{Binding Path='fact_days'}" Width="90" CanUserSort="False" ElementStyle="{StaticResource WrapText}"/>
-                                <DataGridTextColumn Header="Заказ" Binding="{Binding Path='project_name'}" Width="90" CanUserSort="False"/>
+                                <DataGridTextColumn Header="Дата получения" Binding="{Binding 'came_at'}"  Width="*" CanUserSort="True" ElementStyle="{StaticResource WrapText}"/>
+                                <DataGridTextColumn Header="Дата начала" Binding="{Binding Path='work_start'}" Width="*" CanUserSort="True" ElementStyle="{StaticResource WrapText}"/>
+                                <DataGridTextColumn Header="Ориент дни" Binding="{Binding Path='suppose_days'}" Width="*" CanUserSort="False" ElementStyle="{StaticResource WrapText}"/>
+                                <DataGridTextColumn Header="Факт дни" Binding="{Binding Path='fact_days'}" Width="*" CanUserSort="False" ElementStyle="{StaticResource WrapText}"/>
+                                <DataGridTextColumn Header="Заказ" Binding="{Binding Path='project_name'}" Width="*" CanUserSort="False"/>
                                 <DataGridTemplateColumn Width="50" CanUserSort="False">
                                     <DataGridTemplateColumn.CellTemplate>
                                         <DataTemplate>
