--- a/DesignTaburetka/Pages/OrderTask.xaml
+++ b/DesignTaburetka/Pages/OrderTask.xaml
@@ -22,13 +22,13 @@
                   Style="{StaticResource DataStyle}"
                   ColumnHeaderStyle="{StaticResource HeaderStyle}" >
             <DataGrid.Columns>
-                <DataGridTextColumn Header="id" Binding="{Binding Path='order_id'}" IsReadOnly="True" Width="Auto" SortDirection="Ascending" CanUserSort="True" />
+                <DataGridTextColumn Header="ID контракта" Binding="{Binding Path='order_id'}" IsReadOnly="True" Width="Auto" SortDirection="Ascending" CanUserSort="True" />
                 <DataGridTextColumn Header="Название" Binding="{Binding 'project_name'}" Width="*" CanUserSort="True" ElementStyle="{StaticResource WrapText}"/>
-                <DataGridTextColumn Header="Клиент" Binding="{Binding 'client_id'}"  Width="*" CanUserSort="True" ElementStyle="{StaticResource WrapText}"/>
+                <DataGridTextColumn Header="Клиент" Binding="{Binding 'client_name'}"  Width="*" CanUserSort="True" ElementStyle="{StaticResource WrapText}"/>
                 <DataGridTextColumn Header="Создан" Binding="{Binding Path='created_at'}" Width="100" CanUserSort="True" ElementStyle="{StaticResource WrapText}"/>
                 <DataGridTextColumn Header="Пред.время" Binding="{Binding Path='suppode_days'}" Width="Auto" CanUserSort="True"/>
                 <DataGridTextColumn Header="Комментарий" Binding="{Binding Path='comment'}" Width="150" CanUserSort="False" ElementStyle="{StaticResource WrapText}"/>
-                <DataGridTextColumn Header="Добавил" Binding="{Binding Path='added_by'}" Width="Auto" CanUserSort="True"/>
+                <DataGridTextColumn Header="Добавил" Binding="{Binding Path='emp_name'}" Width="Auto" CanUserSort="True"/>
                 <DataGridTextColumn Header="Тип заказа" Binding="{Binding Path='order_type_id'}" Width="Auto" CanUserSort="True"/>
                 <DataGridTextColumn Header="Срочность" Binding="{Binding Path='order_emergency'}" Width="Auto" CanUserSort="True"/>
                 <DataGridTemplateColumn Width="50" CanUserSort="False">
