--- a/DesignTaburetka/Pages/Clients.xaml
+++ b/DesignTaburetka/Pages/Clients.xaml
@@ -27,7 +27,7 @@
                 <DataGridTextColumn Header="Имя Клиента" Binding="{Binding client_name}" Width="*" CanUserSort="True"/>
                 <DataGridTextColumn Header="Телефоны" Binding="{Binding Path='client_phone'}" Width="*" CanUserSort="True"/>
                 <DataGridTextColumn Header="Адрес" Binding="{Binding Path='client_address'}" Width="*" CanUserSort="True"/>
-                <DataGridTextColumn Header="Тип клиента" Binding="{Binding Path='ClientType'}" Width="*" CanUserSort="True"/>
+                <DataGridTextColumn Header="Тип клиента" Binding="{Binding Path='client_type_name'}" Width="*" CanUserSort="True"/>
                 <DataGridTemplateColumn Width="Auto" CanUserSort="False">
                     <DataGridTemplateColumn.CellTemplate>
                         <DataTemplate>
